--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "test": "node --import tsx src/mcp-bridge.test.ts"
+    "test": "npx --yes tsx src/mcp-bridge.test.ts"
   },
   "dependencies": {
     "@sinclair/typebox": "^0.34.0"
